<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:text="@string/txt_usuario" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="40dp"
        android:text="@string/txt_contraseña" />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="40dp"
        android:text="@string/btn_ingresar" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="200dp"
        android:text="@string/btn_registrar" />

    <EditText
        android:id="@+id/txt_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="200dp"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txt_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="200dp"
        android:inputType="textPersonName" />

</RelativeLayout>
