<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_reg_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="40dp"
        android:text="@string/txt_usuario"/>

    <TextView
        android:id="@+id/txt_reg_contraseña"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="40dp"
        android:text="@string/txt_contraseña"/>

    <Button
        android:id="@+id/btn_reg_aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="40dp"
        android:text="@string/btn_aceptar" />

    <Button
        android:id="@+id/btn_reg_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="200dp"
        android:text="@string/btn_cancelar" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/txt_reg_usuario"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText"
        android:layout_alignTop="@+id/txt_reg_contraseña"
        android:ems="10"
        android:inputType="textPassword" />
</RelativeLayout>